// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parse markdown with liquid link 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 11,
              "line": 2,
              "offset": 11,
            },
            "indent": Array [],
            "start": Object {
              "column": 3,
              "line": 2,
              "offset": 3,
            },
          },
          "type": "text",
          "value": "Header 1",
        },
      ],
      "depth": 1,
      "position": Position {
        "end": Object {
          "column": 11,
          "line": 2,
          "offset": 11,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "heading",
    },
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 11,
              "line": 4,
              "offset": 23,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 4,
              "offset": 13,
            },
          },
          "type": "text",
          "value": "This is a ",
        },
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 26,
                  "line": 4,
                  "offset": 38,
                },
                "indent": Array [],
                "start": Object {
                  "column": 12,
                  "line": 4,
                  "offset": 24,
                },
              },
              "type": "text",
              "value": "reference link",
            },
          ],
          "identifier": "reference link",
          "label": "reference link",
          "position": Position {
            "end": Object {
              "column": 29,
              "line": 4,
              "offset": 41,
            },
            "indent": Array [],
            "start": Object {
              "column": 11,
              "line": 4,
              "offset": 23,
            },
          },
          "referenceType": "collapsed",
          "type": "linkReference",
        },
        Object {
          "position": Position {
            "end": Object {
              "column": 38,
              "line": 4,
              "offset": 50,
            },
            "indent": Array [],
            "start": Object {
              "column": 29,
              "line": 4,
              "offset": 41,
            },
          },
          "type": "text",
          "value": " example.",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 38,
          "line": 4,
          "offset": 50,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 4,
          "offset": 13,
        },
      },
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 9,
              "line": 6,
              "offset": 60,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 6,
              "offset": 52,
            },
          },
          "type": "text",
          "value": "This is ",
        },
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 32,
                  "line": 6,
                  "offset": 83,
                },
                "indent": Array [],
                "start": Object {
                  "column": 10,
                  "line": 6,
                  "offset": 61,
                },
              },
              "type": "text",
              "value": "another reference link",
            },
          ],
          "identifier": "another reference link",
          "label": "another reference link",
          "position": Position {
            "end": Object {
              "column": 35,
              "line": 6,
              "offset": 86,
            },
            "indent": Array [],
            "start": Object {
              "column": 9,
              "line": 6,
              "offset": 60,
            },
          },
          "referenceType": "collapsed",
          "type": "linkReference",
        },
        Object {
          "position": Position {
            "end": Object {
              "column": 44,
              "line": 6,
              "offset": 95,
            },
            "indent": Array [],
            "start": Object {
              "column": 35,
              "line": 6,
              "offset": 86,
            },
          },
          "type": "text",
          "value": " example.",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 44,
          "line": 6,
          "offset": 95,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 6,
          "offset": 52,
        },
      },
      "type": "paragraph",
    },
    Object {
      "identifier": "reference link",
      "label": "reference link",
      "position": Position {
        "end": Object {
          "column": 55,
          "line": 8,
          "offset": 151,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 8,
          "offset": 97,
        },
      },
      "title": "reference link",
      "type": "definition",
      "url": "link/to/a/markdown/file.md",
    },
    Object {
      "identifier": "another reference link",
      "label": "another reference link",
      "position": Position {
        "end": Object {
          "column": 61,
          "line": 9,
          "offset": 212,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 9,
          "offset": 152,
        },
      },
      "title": "another reference link",
      "type": "definition",
      "url": "link/to/another/file.md",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 61,
      "line": 9,
      "offset": 212,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`Parse normal markdown 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 11,
              "line": 2,
              "offset": 11,
            },
            "indent": Array [],
            "start": Object {
              "column": 3,
              "line": 2,
              "offset": 3,
            },
          },
          "type": "text",
          "value": "Header 1",
        },
      ],
      "depth": 1,
      "position": Position {
        "end": Object {
          "column": 11,
          "line": 2,
          "offset": 11,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "heading",
    },
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 7,
              "line": 4,
              "offset": 19,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 4,
              "offset": 13,
            },
          },
          "type": "text",
          "value": "Hello ",
        },
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 14,
                  "line": 4,
                  "offset": 26,
                },
                "indent": Array [],
                "start": Object {
                  "column": 9,
                  "line": 4,
                  "offset": 21,
                },
              },
              "type": "text",
              "value": "World",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 16,
              "line": 4,
              "offset": 28,
            },
            "indent": Array [],
            "start": Object {
              "column": 7,
              "line": 4,
              "offset": 19,
            },
          },
          "type": "strong",
        },
        Object {
          "position": Position {
            "end": Object {
              "column": 17,
              "line": 4,
              "offset": 29,
            },
            "indent": Array [],
            "start": Object {
              "column": 16,
              "line": 4,
              "offset": 28,
            },
          },
          "type": "text",
          "value": "!",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 17,
          "line": 4,
          "offset": 29,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 4,
          "offset": 13,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 17,
      "line": 4,
      "offset": 29,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
